crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__core__task_current_when_unset.snap
---
source: crates/engram-cli/tests/cli/snapshot/core.rs
expression: "f.run(&[\"task\", \"current\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] task current
exit: 1
--- stdout ---
--- stderr ---
Error: no session id: pass --session-id or set CLAUDE_SESSION_ID (the task mapping is per-session)
