crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__core__update_tags_add_and_remove.snap
---
source: crates/engram-cli/tests/cli/snapshot/core.rs
expression: "f.run(&[\"update\", &id, \"--tags-add\", \"gamma\", \"--tags-remove\", \"alpha\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] update [UUID] --tags-add gamma --tags-remove alpha
exit: 1
--- stdout ---
--- stderr ---
Error: Failed to send embed request to Ollama

Caused by:
    0: error sending request for url (http://localhost:11434/api/embed)
    1: client error (Connect)
    2: tcp connect error
    3: Connection refused (os error 111)
