crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__core__update_unknown_id_fails.snap
---
source: crates/engram-cli/tests/cli/snapshot/core.rs
expression: "f.run(&[\"update\", \"no-such-memory\", \"-s\", \"X\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] update no-such-memory -s X
exit: 1
--- stdout ---
--- stderr ---
Error: Memory not found: no-such-memory
