crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__core__verify_existing.snap
---
source: crates/engram-cli/tests/cli/snapshot/core.rs
expression: "f.run(&[\"verify\", &id])"
---
$ engramdb --no-maintenance --dir [PROJECT] verify [UUID]
exit: 0
--- stdout ---
{
  "id": "[UUID]",
  "review_cleared": false,
  "verified": true
}
--- stderr ---
