crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__core__verify_unknown_id_fails.snap
---
source: crates/engram-cli/tests/cli/snapshot/core.rs
expression: "f.run(&[\"verify\", \"no-such-memory\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] verify no-such-memory
exit: 1
--- stdout ---
--- stderr ---
Error: Memory not found: no-such-memory
